Add ldjam.com entry link and jar download link to index page

--- a/html/webapp/index.html
+++ b/html/webapp/index.html
@@ -10,6 +10,8 @@
 <body>
 <a class="superdev" href="javascript:%7B%20window.__gwt_bookmarklet_params%20%3D%20%7B'server_url'%3A'http%3A%2F%2Flocalhost%3A9876%2F'%7D%3B%20var%20s%20%3D%20document.createElement('script')%3B%20s.src%20%3D%20'http%3A%2F%2Flocalhost%3A9876%2Fdev_mode_on.js'%3B%20void(document.getElementsByTagName('head')%5B0%5D.appendChild(s))%3B%7D">&#8635;</a>
 <div align="center" id="embed-html"></div>
+<div style="text-align: center;"><strong><a href="https://lando.systems/games/ld50-avalaunch/ld50-avalaunch.jar">Download the desktop version (Java runnable jar)</a></strong></div>
+<div style="text-align: center;"><strong><a href="https://ldjam.com/events/ludum-dare/50/ava-launch">Ludum Dare 50 entry page</a></strong></div>
 <script type="text/javascript" src="html/html.nocache.js"></script>
 </body>
 
